src/websockets/qwebsocketdataprocessor.cpp
@@ -84,13 +84,14 @@ QWebSocketDataProcessor::QWebSocketDataProcessor(QObject *parent) :
     m_textMessage(),
     m_payloadLength(0),
     m_pConverterState(nullptr),
-    m_pTextCodec(QTextCodec::codecForName("UTF-8"))
+    m_pTextCodec(QTextCodec::codecForName("UTF-8")),
+    m_waitTimer(new QTimer(this))
 {
     clear();
     // initialize the internal timeout timer
-    waitTimer.setInterval(5000);
-    waitTimer.setSingleShot(true);
-    waitTimer.callOnTimeout(this, &QWebSocketDataProcessor::timeout);
+    m_waitTimer->setInterval(5000);
+    m_waitTimer->setSingleShot(true);
+    m_waitTimer->callOnTimeout(this, &QWebSocketDataProcessor::timeout);
 }
 
 /*!
@@ -163,8 +164,8 @@ bool QWebSocketDataProcessor::process(QIODevice *pIoDevice)
         if (!frame.isDone()) {
             // waiting for more data available
             QObject::connect(pIoDevice, &QIODevice::readyRead,
-                             &waitTimer, &QTimer::stop, Qt::UniqueConnection);
-            waitTimer.start();
+                             m_waitTimer, &QTimer::stop, Qt::UniqueConnection);
+            m_waitTimer->start();
             return false;
         } else if (Q_LIKELY(frame.isValid())) {
             if (frame.isControlFrame()) {
